# valcrown-tauri

./: package.json
.github/workflows/: build.yml
src/: index.html  login.html  onboard.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/css/: style.css
src/js/: api.js  app.js  bridge.js  deviceId.js  gameDb.js  login.js
